<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_row_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.mikhaellopez.circularimageview.CircularImageView

        android:id="@+id/message_item_row_avatar"
        android:src="@drawable/yo"
        android:layout_marginTop="@dimen/dp15"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/dp21"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dp54"
        android:layout_height="@dimen/dp55" />
    
    <View
        android:id="@+id/message_line"
        android:background="@color/midnightExpress2_10percent"
        android:layout_marginEnd="@dimen/dp21"
        android:layout_marginStart="@dimen/dp21"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/message_item_row_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp1"/>

    <TextView
        android:id="@+id/mesasge_name"
        android:textColor="@color/cerise"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/sp15"
        android:text="@string/example7"
        android:layout_marginTop="@dimen/dp22"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/dp11"
        app:layout_constraintStart_toEndOf="@id/message_item_row_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/message_content"
        android:layout_marginTop="@dimen/dp8"
        android:textSize="@dimen/sp13"
        android:textColor="@color/midnightExpress2_65percent"
        android:text="@string/example8"
        app:layout_constraintStart_toStartOf="@id/mesasge_name"
        app:layout_constraintTop_toBottomOf="@id/mesasge_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/time_message"
        android:textColor="@color/midnightExpress_40percent"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/sp10"
        android:text="@string/time_example"
        app:layout_constraintTop_toTopOf="@id/message_content"
        app:layout_constraintEnd_toEndOf="@id/message_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_dot"
        app:cardBackgroundColor="@color/cerise"
        app:cardCornerRadius="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp3"
        android:layout_marginEnd="@dimen/dp11"
        app:layout_constraintEnd_toEndOf="@id/message_item_row_avatar"
        app:layout_constraintBottom_toBottomOf="@id/message_item_row_avatar"
        android:layout_width="@dimen/dp11"
        android:layout_height="@dimen/dp11"/>

    <TextView
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/anything7"
        android:background="@drawable/circle_message"
        android:id="@+id/notify_message"
        android:layout_width="@dimen/dp17"
        android:layout_height="@dimen/dp17"
        app:layout_constraintEnd_toEndOf="@id/message_line"
        app:layout_constraintTop_toTopOf="@id/mesasge_name" />

</androidx.constraintlayout.widget.ConstraintLayout>